--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <body>
     <header class="header">
       <div class="container">
+        <div class="overlay active" data-overlay></div>
         <a href="index.html" class="logo">
           <img src="assets/img/logo.png" alt="logosite" />
         </a>
@@ -38,23 +39,23 @@
               <option value="ES">ES</option>
             </select>
           </div>
+          <button class="bnt bnt-primary">entrar</button>
         </div>
 
-        <button class="bnt bnt-primary">entrar</button>
+        
 
-        <button class="bnt-mobile">
+        <button class="bnt-mobile" data-menu-open>
           <ion-icon name="menu-outline"></ion-icon>
         </button>
 
 
-        <nav class="navbar">
-          
+        <nav class="navbar " data-navbar>
           <div class="navbar-top">
             <a href="index.html">
               <img src="assets/img/logo.png" alt="logo">
             </a>
 
-             <button class="menu-close">
+             <button class="menu-close" data-menu-close>
               <ion-icon name="close-outline"></ion-icon>
              </button>
           </div>
